[metadata]
name = saad
version = 1.0
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    astropy>=4.3
    matplotlib>=3.0
    numpy>=1.18
    pandas>=1.5
    scipy>=1.7

[coverage:run]
relative_files = True

[options.packages.find]
where=src